Fix Sonar empty block warnings in E2E test by adding explanatory comments